--- a/U-net_deployment.ipynb
+++ b/U-net_deployment.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "def crop(img, h, w):\n",
-    "    \"\"\"Crops the image until to match with specified height and width values\n",
+    "    \"\"\"Crops the image to match with specified height and width values\n",
     "\n",
     "    Args:\n",
     "        img (ndarray): image name\n",
