--- a/Segmentation/Contour_detection.ipynb
+++ b/Segmentation/Contour_detection.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# _____________________________Lesion contour detection + stats_____________________________"
+    "# Lesion contour detection using probability maps from segmentation and Fv/Fm values"
    ]
   },
   {
