--- a/Segmentation/Contour_detection.ipynb
+++ b/Segmentation/Contour_detection.ipynb
@@ -141,8 +141,6 @@
    "source": [
     "path = '/home/theo/datasets/Dossiers_Mildiou_Maj2023/311_f23_R2_Bintje_ccf_P2'\n",
     "\n",
-    "# A VOIR : /home/theo/Bureau/DATA/Fluo_Visible_Mildiou_Maj2023/Dossiers_Mildiou_Maj2023/203_R1_Desiree_eau_P2\n",
-    "\n",
     "recal_files = ski.io.imread_collection(path + '/Recalibrated_CPD/*').files\n",
     "segment_RF_files = ski.io.imread_collection(path + '/Segment_RF/*').files                              \n",
     "\n",
@@ -279,14 +277,14 @@
     }
    ],
    "source": [
-    "for i in range(len(vis_RF_segmented)):  \n",
+    "for i, im_segmented in enumerate(vis_RF_segmented):  \n",
     "\n",
     "    fig, (ax1, ax2, ax3) = plt.subplots(1, 3)\n",
     "    ax1.imshow(l_fluo_threshold[i])\n",
     "\n",
     "    ####################### VISIBLE CONTOUR PART  ############################################\n",
     "\n",
-    "    im_cont = ski.io.imread(vis_RF_segmented[i])\n",
+    "    im_cont = ski.io.imread(im_segmented)\n",
     "    result_vis = ndimage.maximum_filter(im_cont, size=8)\n",
     "    result_vis = ndimage.uniform_filter(result_vis, size  = 10)\n",
     "\n",
@@ -301,7 +299,6 @@
     "\n",
     "    ################ FLUO CONTOUR PART #####################################################\n",
     "    im_fluo = np.array(Image.open(fluo_files[i]))\n",
-    "    ax3.imshow(im_fluo)\n",
     "    im_fluo_threshold = np.array(im_fluo)\n",
     "    im_fluo_threshold[(im_fluo_threshold < threshold) & (im_fluo_threshold !=0)] = 2\n",
     "\n",
@@ -323,6 +320,7 @@
     "            ax1.plot(contour[:, 1], contour[:, 0], linewidth=2, color = 'cyan')\n",
     "\n",
     "    ax2.imshow(im_cont)\n",
+    "    ax3.imshow(im_fluo)\n",
     "\n",
     "    if i == 0:\n",
     "        ax1.set_title('Lesion contours')\n",
