--- a/Segmentation/Contour_detection.ipynb
+++ b/Segmentation/Contour_detection.ipynb
@@ -162,10 +162,7 @@
     "    fluo = Image.open(fluo_path)\n",
     "    proba_map_vis = ski.io.imread(vis_RF_segmented[i])\n",
     "    fluo_threshold = np.copy(fluo)\n",
-    "    fluo_threshold[(fluo_threshold >= .6)] = 4\n",
-    "    fluo_threshold[(fluo_threshold > 0) & (fluo_threshold < .4)] = 1\n",
-    "    fluo_threshold[(fluo_threshold >= .4) & (fluo_threshold < .5)] = 2\n",
-    "    fluo_threshold[(fluo_threshold  >= .5) & (fluo_threshold < .6)] = 3\n",
+    "    fluo_threshold[(1-fluo_threshold <= threshold)] = 2
     "    l_fluo_threshold.append(fluo_threshold)\n",
     "    plt.subplot(121)\n",
     "    plt.imshow(fluo_threshold)\n",
@@ -196,7 +193,7 @@
     "im_fluo = np.array(Image.open(fluo_files[3]))\n",
     "\n",
     "im_fluo_threshold = np.array(im_fluo)\n",
-    "im_fluo_threshold[(im_fluo_threshold < threshold) & (im_fluo_threshold !=0)] = 2\n",
+    "im_fluo_threshold[(im_fluo_threshold < 1 - threshold) & (im_fluo_threshold !=0)] = 2\n",
     "\n",
     "#Extract mask corresponding to lesion\n",
     "mask = np.array(im_fluo_threshold)\n",
@@ -300,7 +297,7 @@
     "    ################ FLUO CONTOUR PART #####################################################\n",
     "    im_fluo = np.array(Image.open(fluo_files[i]))\n",
     "    im_fluo_threshold = np.array(im_fluo)\n",
-    "    im_fluo_threshold[(im_fluo_threshold < threshold) & (im_fluo_threshold !=0)] = 2\n",
+    "    im_fluo_threshold[(im_fluo_threshold < 1 - threshold) & (im_fluo_threshold !=0)] = 2\n",
     "\n",
     "    #Extract mask corresponding to lesion\n",
     "    mask = np.array(im_fluo_threshold)\n",
@@ -379,7 +376,7 @@
     "        return area\n",
     "\n",
     "    im_fluo_threshold = np.array(leaf)\n",
-    "    im_fluo_threshold[(im_fluo_threshold < threshold) & (im_fluo_threshold !=0)] = 2\n",
+    "    im_fluo_threshold[(im_fluo_threshold < 1 - threshold) & (im_fluo_threshold !=0)] = 2\n",
     "\n",
     "    mask = np.array(im_fluo_threshold)\n",
     "    mask[mask != 0] = 1\n",
