--- a/Segmentation/Contour_detection.ipynb
+++ b/Segmentation/Contour_detection.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# _____________________________Lesion contour detection + stats_____________________________"
+    "# Contour detection for probability maps and Fv/Fm images"
    ]
   },
   {
@@ -35,33 +35,6 @@
    "source": [
     "threshold = .5\n",
     "min_contour_size = 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"img = proba_map_ch3[1] \n",
-    "xx, yy = np.mgrid[0:img.shape[0], 0:img.shape[1]]\n",
-    "\n",
-    "fig = plt.figure(figsize=(6,6))\n",
-    "ax = plt.axes(projection='3d')\n",
-    "\n",
-    "ax.xaxis.set_pane_color((1.0, 1.0, 1.0, 0.0))                                          #   CODE POUR VISUALISER CONTOUR EN 3D\n",
-    "ax.yaxis.set_pane_color((1.0, 1.0, 1.0, 0.0))\n",
-    "ax.zaxis.set_pane_color((1.0, 1.0, 1.0, 0.0))\n",
-    "ax.set_yticklabels([])\n",
-    "ax.set_xticklabels([])\n",
-    "ax.set_zlim(0,1)\n",
-    "\n",
-    "ax.contour3D(xx, yy, img, [.08], cmap = \"gist_gray\")\n",
-    "ax.contour3D(xx, yy, img, 6, cmap='terrain')          #gist_earth, terrain, hot\n",
-    "ax.view_init(elev=25, azim=80)\n",
-    "\n",
-    "plt.show()\n",
-    "plt.close()\"\"\""
    ]
   },
   {
