--- a/Segmentation/Random_Forest_segmentation.ipynb
+++ b/Segmentation/Random_Forest_segmentation.ipynb
@@ -247,13 +247,15 @@
    ],
    "source": [
     "features_func = partial(feature.multiscale_basic_features,\n",
-    "                        intensity=True, edges=False, texture=True,\n",
-    "                        sigma_min=SIGMA_MIN, sigma_max=SIGMA_MAX,\n",
+    "                        intensity = True, edges = False, texture = True,\n",
+    "                        sigma_min = SIGMA_MIN, sigma_max = SIGMA_MAX,\n",
     "                        channel_axis = -1)\n",
     "features = features_func(x_train)\n",
     "X = features.reshape(features.shape[0]*features.shape[1], features.shape[2])\n",
-    "clf = RandomForestClassifier(n_estimators=100, n_jobs=-1,\n",
-    "                             max_depth=10, max_samples=0.05)\n",
+    "clf = RandomForestClassifier(n_estimators = 100,\n", 
+    "                             n_jobs = -1,\n",
+    "                             max_depth = 10,\n",
+    "                             max_samples = .05)\n",
     "clf = future.fit_segmenter(y_train, features, clf)\n",
     "\n",
     "result = future.predict_segmenter(features, clf)\n",
